typescript/checker/tests/conformance/parser/ecmascript3/Accessors/parserES3Accessors1.ts.stderr
error: TS1056
 --> $DIR/tests/conformance/parser/ecmascript3/Accessors/parserES3Accessors1.ts:2:9
  |
2 |     get Foo() { }
  |         ^^^

error: GetterPropWithoutReturn {
    span: Span {
        lo: BytePos(
            19,
        ),
        hi: BytePos(
            22,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript3/Accessors/parserES3Accessors1.ts:2:9
  |
2 |     get Foo() { }
  |         ^^^

